@@ -36,7 +36,6 @@ import org.jamwiki.utils.WikiLogger;
 public class JFlexParserUtil {
 
 	private static final WikiLogger logger = WikiLogger.getLogger(JFlexParserUtil.class.getName());
-	private static JAMWikiHtmlTagLexer JFLEX_HTML_PROCESSOR = null;
 
 	/**
 	 *
@@ -168,20 +167,16 @@ public class JFlexParserUtil {
 		}
 		// strip any newlines from the tag
 		tag = tag.replace('\n', ' ');
-		if (JFLEX_HTML_PROCESSOR == null) {
-			JFLEX_HTML_PROCESSOR = new JAMWikiHtmlTagLexer(new StringReader(tag));
-		} else {
-			JFLEX_HTML_PROCESSOR.yyreset(new StringReader(tag));
-		}
+		JAMWikiHtmlTagLexer lexer = new JAMWikiHtmlTagLexer(new StringReader(tag));
 		try {
-			while (JFLEX_HTML_PROCESSOR.yylex() != null) {
+			while (lexer.yylex() != null) {
 				// there is no need to store the result since the HtmlTagItem that
 				// is generated by the parser is the item of interest.
 			}
 		} catch (Exception e) {
 			throw new ParserException("Failure while parsing: " + tag, e);
 		}
-		return (JFLEX_HTML_PROCESSOR.getHtmlTagItem() != null) ? JFLEX_HTML_PROCESSOR.getHtmlTagItem() : null;
+		return (lexer.getHtmlTagItem() != null) ? lexer.getHtmlTagItem() : null;
 	}
 
 	/**
